argocd/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: argocd
spec:
  forwardAuth:
    address: http://traefik-forward-auth.traefik.svc.cluster.local:4181
    authResponseHeaders:
      - X-Forwarded-User
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  tls:
    certResolver: letsencrypt 
  entryPoints:
    - websecure
  routes:
  - match: Host(`argocd.defn.ooo`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
    middlewares:
      - name: traefik-forward-auth
